--- a/Verkafni-2/styles.css
+++ b/Verkafni-2/styles.css
@@ -16,5 +16,13 @@ ul li {
     color:green
 }
 ol li {
-    color:blue
+    color:blue ;
+}
+
+    
+
+
+img {
+    max-width: 100%;
+    height:auto
 }
