--- a/Verkefni-3/site/styles.css
+++ b/Verkefni-3/site/styles.css
@@ -3,7 +3,7 @@ html {
 }
 body {
     margin: 0;
-    font-family: 'Rokkitt', serif;
+    font-family: 'Open Sans', sans-serif;
     line-height: 1.5;
 }
 h1, h2, h3 {
@@ -51,8 +51,7 @@ a:hover, a:active {
 
 
 /****** standard IMG *********/
-
-img {
+.img {
      max-width: 100%;
      height: auto;
 }
